@@ -1,3 +1,5 @@
 [B]Version 1.1.29[/B]
 perverzija - added "Full movies" category
 sextb - added search & categories
+xfreehd - fixed search pagination
+xfreehd - hide private videos
